# Parallel-Programming-Course-Projects

./: .gitignore  README.md
CA0 - toturial/: demoCode.cpp  processorInfo.c  processorInfo.cpp  simd_support.c  union.c  union.cpp
CA1 - SIMD/codes/Q1/: main.cpp
CA1 - SIMD/codes/Q2/: howToCompile.txt  main.cpp
CA1 - SIMD/codes/Q3/: main.cpp
CA1 - SIMD/codes/Q4/: main.cpp
CA2 - OpenMP/Q1/: CMakeLists.txt  main.cpp
CA2 - OpenMP/Q2/: CMakeLists.txt  main.cpp
CA2 - OpenMP/Q3/: howToCompile.txt  main.cpp
CA3 - POSIX/: customer.cpp  makefile  order.cpp  queue.cpp  sample.txt  sample2.txt
CA3 - POSIX/headers/: deliverySpace.h
CA3 - POSIX/sample/: sample1.txt  sample2.txt
CA3 - POSIX/src/: Baker.cpp  baker.cpp  baker.h  bakery.out  chaosMain.cpp  customer.cpp  customer.h  deliverySpace.cpp  deliverySpace.h  main.cpp  makefile  order.cpp  order.h  oven.cpp  oven.h  program  queue.cpp  queue.h  sample.cpp  utility.cpp  utility.h
CA4 - Intel Parallel Studio/optimized codes/: My-Wife's-Newphew's-Code- optimized.cpp
CA5 - CUDA/Part1/: main.ipynb  main.py
CA5 - CUDA/Part1&2/: main.py
CA5 - CUDA/Part4/: RayTracerCamera.cu
CA5-CUDA/Q3/: RayTracer.cu
Report/: Report-CA0.docx  Report-CA1.docx  Report-CA2.docx  Report-CA4.docx  Report-CA5.docx  Report.docx
